Saved logging to log file, graceful shutdown for threads